kubernetes/voter-api/candidate-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: candidate
  name: candidate
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: candidate
    spec:
      containers:
        - image: garystafford/candidate-service:kub-aks-0.5.128
          name: candidate
          ports:
          - containerPort: 8080
          resources: {}
          command: ["/bin/sh"]
          args: ["-c", "java -Dspring.profiles.active=kub-aks -Dlogging.level.root=DEBUG -Djava.security.egd=file:/dev/./urandom -jar /candidate/candidate-service.jar"]
          imagePullPolicy: Always
      restartPolicy: Always
status: {}
