kubernetes/voter-api/election-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: election
  name: election
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: election
    spec:
      containers:
      - image: garystafford/election-service:kub-aks-0.5.46
        name: election
        ports:
        - containerPort: 8080
        resources: {}
        command: ["/bin/sh"]
        args: ["-c", "java -Dspring.profiles.active=kub-aks -Djava.security.egd=file:/dev/./urandom -jar /election/election-service.jar"]
        imagePullPolicy: Always
      restartPolicy: Always
status: {}
