kubernetes/voter-api/gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gateway
    spec:
      containers:
      - image: garystafford/voter-api-gateway:kub-aks-0.5.4
        name: gateway
        ports:
        - name: port8080
          containerPort: 8080
        - name: port8443
          containerPort: 8443
        - name: port63443
          containerPort: 63443
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
status: {}
