kubernetes/voter-api/voter-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: voter
  name: voter
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: voter
    spec:
      containers:
      - image: garystafford/voter-service:kub-aks-0.5.243
        name: voter
        ports:
        - containerPort: 8080
        resources: {}
        command: ["/bin/sh"]
        args: ["-c", "java -Dspring.profiles.active=kub-aks -Dlogging.level.root=DEBUG -Djava.security.egd=file:/dev/./urandom -jar /voter/voter-service.jar"]
        imagePullPolicy: Always
      restartPolicy: Always
status: {}
