kubernetes/voter-api/candidate-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: candidate
  name: candidate
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: candidate
status:
  loadBalancer: {}
