kubernetes/voter-api/election-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: election
  name: election
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: election
status:
  loadBalancer: {}
