kubernetes/voter-api/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  type: LoadBalancer
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  - name: "443"
    port: 443
    targetPort: 8443
  - name: "63443"
    port: 63443
    targetPort: 63443
  selector:
    io.kompose.service: gateway
status:
  loadBalancer: {}
