kubernetes/voter-api/voter-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voter-api
  labels:
    io.kompose.service: voter
  name: voter
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: voter
status:
  loadBalancer: {}
